refactor for security switch to not use the db